nav bar no longer disappears when viewed on smaller screens

--- a/layout.css
+++ b/layout.css
@@ -382,7 +382,7 @@ table a, #comments a{background-color:inherit;}
 	#header #logo{margin-top:0;}
 
 	#mainav{}
-	#mainav ul{display:none;}
+	/* #mainav ul{display:none;} */
 	#mainav form{display:block; margin-top:2px;}
 
 	#breadcrumb{}
